<resources>
    <string name="app_name">Ape-voice</string>
    <string name="facebook_app_id">1682083695406081</string>

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="progress_dialog_loading">Loading&#8230;</string>
    <string name="time_seconds">seconds</string>
    <string name="internet_connection">Please make sure to have an internet connection.</string>
    <string name="add_password">Add your password</string>
    <string name="add_new_email">Add your new email</string>
    <string name="change_email_success">Change email success.</string>
    <string name="change_email_error">Change email error.</string>
    <string name="change_password_success">Change password success.</string>
    <string name="change_password_error">Change password error.</string>
    <string name="add_new_password">Add your new password</string>
    <string name="add_old_password">Add your old password</string>
    <string name="add_name">Add your name</string>
    <string name="change_name_success">Change full name success.</string>
    <string name="change_name_error">Change full name error.</string>
    <string name="cant_change_email">Can\'t change your email</string>
    <string name="cant_change_password">Can\'t change your password</string>
    <string name="share_via_messenger">Messenger</string>

    <string name="hint_login">Please enter your Ape-voice username or email and password below</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="dont_have_account">I don\'t have any account. Register?</string>
    <string name="forgot_password">Forgot?</string>
    <string name="login_app_text">Login to Ape-voice</string>
    <string name="sound_text">Sounds</string>
    <string name="favorite_text">Favorites</string>
    <string name="title_my_profile">My profile</string>
    <string name="title_change_info">Change info</string>
    <string name="item_full_name">Full name</string>
    <string name="item_email">Email</string>
    <string name="item_password">Password</string>
    <string name="title_action">Action</string>
    <string name="item_action_logout">Logout</string>
    <string name="text_record_a_sound">Record a sound</string>
    <string name="hint_record_sound">Tab \'Start\' to record your sound</string>
    <string name="text_start_record">Start</string>

    <string name="title_register">Register to Ape-voice</string>
    <string name="hint_enter_yourname">Enter your name</string>
    <string name="hint_register_new_account">Please enter your Ape-voice username or email and password below</string>
    <string name="already_have_an_account">Already have an account. Login now?</string>
    <string name="register_successfully">Register successfully</string>
    <string name="hint_continue">Press \'Continue\' to start using app</string>
    <string name="select_next">Next</string>
    <string name="reset_password">Reset Password</string>
    <string name="hint_reset_password">Please enter the email address of your Ape-voice account below</string>
    <string name="hint_email">Email</string>
    <string name="add_sound">Add Sound</string>

    <string name="login_fail">Email or password is wrong!</string>
    <string name="facebook_cancel_by_user">Facebook cancel by user</string>
    <string name="facebook_login_error">Facebook login error</string>
    <string name="record_done">Done</string>
    <string name="hint_record_done">Tap when you are done!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="reset_pass_success">Reset password success. Password sent to your email.</string>
    <string name="reset_pass_fail">Reset password fail</string>
    <string name="sounds">Sounds</string>
    <string name="videos">Videos</string>
    <string name="dont_have_video">You don\'t have any Video yet!</string>
    <string name="btn_create_video">Create your video</string>

    <string name="login_with_facbook">Login with facebook</string>
    <string name="upload_by">upload by&#160;</string>

    <string name="record_a_sound">Record a sound</string>
    <string name="import_a_sound">Import a sound</string>
    <string name="select_range">Edit an audio</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_plays">Sort by plays</string>
    <string name="sort_by_upload_date">Sort by upload day</string>

    <string name="add_to_soundboard">Add to soundboard</string>
    <string name="share_it">Share it</string>
    <string name="report">Report</string>
    <string name="improve">Improve</string>

    <string name="delete">Delete</string>

    <string name="add_your_name">Add your name</string>
    <string name="verify_your_email">Verify your mail</string>
    <string name="add_your_new_pass">Add your new password</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="new_email">New Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <string name="length_audio_over">The length of audio over </string>
    <string name="length_audio_less_than">he length of audio less than </string>
    <string name="second">Seconds</string>
    <string name="audio_coundnt_save">Audio cound not saved</string>
    <string name="pick_name_audio">Enter name</string>

    <string name="resource_not_found">Resource not found</string>

    <string name="log_in">Login</string>
    <string name="register">Register</string>

    <string name="come_in_soon">Coming soon</string>

    <string name="title_favorite">My Favorites</string>
    <string name="title_mysound">My Sounds</string>

    <string name="uploading">Uploading</string>
    <string name="show_video">Show video</string>
    <string name="move_select_range">Hint: Move handles to select range</string>
    <string name="muxing">Muxing...</string>

    <string name="share_your_video">Share your video</string>

    <string name="alert_group_title">Select type</string>


</resources>
