<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/title_my_profile">
        <menu>
            <item
                android:id="@+id/nav_sounds"
                android:icon="@mipmap/ic_nav_sound"
                android:title="@string/sound_text" />

            <item
                android:id="@+id/nav_favorites"
                android:icon="@mipmap/ic_nav_favourite"
                android:title="@string/favorite_text" />
        </menu>
    </item>

    <item android:title="@string/title_change_info">
        <menu>
            <item
                android:id="@+id/nav_fullname"
                android:icon="@mipmap/ic_nav_name"
                android:title="@string/item_full_name" />
            <item
                android:id="@+id/nav_email"
                android:icon="@mipmap/ic_nav_email"
                android:title="@string/item_email" />

            <item
                android:id="@+id/nav_password"
                android:icon="@mipmap/ic_nav_password"
                android:title="@string/item_password" />
        </menu>
    </item>

    <item android:title="@string/title_action">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_nav_logout"
                android:title="@string/item_action_logout" />
        </menu>
    </item>

</menu>
